Added aritsts / albums view
